--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section>
                <div> 
                 <h2>Understanding the Box Model</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur odio, repellendus cum magnam velit non?</p>
+                <p>Lorem ipsum dolor sit, amet <span>Lorem, ipsum dolor.</span> adipisicing elit. Aspernatur odio, repellendus cum magnam velit non?</p>
             </div>
             </section>
             <section>
